--- a/src/main/resources/templates/admin/base/footer.html
+++ b/src/main/resources/templates/admin/base/footer.html
@@ -1,4 +1,4 @@
-<div th:fragment="common_footer" xmlns:th="http://www.w3.org/1999/xhtml">
+<div th:fragment="common_footer" >
     <script type="text/javascript" src=""
             th:src="
       @{{path}/static/admin/js/jquery.min.js(path=${#servletContext.getContextPath()})}"
