--- a/src/main/resources/templates/admin/shuo/edit.html
+++ b/src/main/resources/templates/admin/shuo/edit.html
@@ -1,20 +1,18 @@
-{extend name="base/template"}
-{block name="title"}链接修改{/block}
+<div id="head" th:include="admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
-{block name="content"}
 <div class="x-body">
     <form class="layui-form" action="">
 
         <div class="layui-form-item">
             <label class="layui-form-label">内容：</label>
             <div class="layui-input-block">
-                <input type="text" name="content" value="{$shuo.content}"  required lay-verify="required"
+                <input type="text" name="content" th:value="${shuo.content}"  required lay-verify="required"
                        placeholder="请输入内容" autocomplete="off"
                        class="layui-input">
             </div>
         </div>
 
-        <input type="hidden" name="id" value="{$shuo.id}">
+        <input type="hidden" name="id" th:value="${shuo.id}">
 
         <div class="layui-form-item">
             <div class="layui-input-block">
@@ -23,9 +21,7 @@
         </div>
     </form>
 </div>
-{/block}
 
-{block name="script"}
 <script>
     layui.use(['form', 'layer'], function () {
         $ = layui.jquery;
@@ -53,4 +49,4 @@
 
     });
 </script>
-{/block}
+<div id="footer" th:include="admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
