--- a/src/main/resources/templates/admin/article/edit.html
+++ b/src/main/resources/templates/admin/article/edit.html
@@ -1,5 +1,5 @@
 
-<div id="head" th:include="/admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
+<div id="head" th:include="admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
 
 <link rel="stylesheet"   xmlns:th="http://www.w3.org/1999/xhtml" th:href="@{{path}/static/admin/lib/editor/css/editormd.css(path=${#servletContext.getContextPath()})}">
@@ -183,5 +183,5 @@
 
     });
 </script>
-<div id="footer" th:include="/admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
+<div id="footer" th:include="admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
