--- a/src/main/resources/templates/admin/base/head.html
+++ b/src/main/resources/templates/admin/base/head.html
@@ -1,4 +1,4 @@
-<div th:fragment="common_head" xmlns:th="http://www.w3.org/1999/xhtml">
+<div th:fragment="common_head" xmlns="http://www.w3.org/1999/xhtml">
 <!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -11,19 +11,19 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/font.css" th:href="
       @{{path}/static/admin/css/font.css(path=${#servletContext.getContextPath()})}">
-    <link rel="stylesheet" href="__ADMIN__/css/xadmin.css"
+    <link rel="stylesheet"
           th:href="
       @{{path}/static/admin/css/xadmin.css(path=${#servletContext.getContextPath()})}">
-    <script src="__ADMIN__/js/jquery.min.js"
+    <script type="text/javascript"
             th:src="
       @{{path}/static/admin/js/jquery.min.js(path=${#servletContext.getContextPath()})}">
     </script>
-    <script type="text/javascript" src="__ADMIN__/lib/layui/layui.js"
+    <script type="text/javascript"
             th:src="
       @{{path}/static/admin/lib/layui/layui.js(path=${#servletContext.getContextPath()})}">
             charset="utf-8"
     </script>
-    <script type="text/javascript" src="__ADMIN__/js/xadmin.js"
+    <script type="text/javascript"
 
             th:src="
       @{{path}/static/admin/js/xadmin.js(path=${#servletContext.getContextPath()})}"
