--- a/src/main/resources/templates/admin/shuo/create.html
+++ b/src/main/resources/templates/admin/shuo/create.html
@@ -1,7 +1,5 @@
-{extend name="base/template"}
-{block name="title"}链接添加{/block}
+<div id="head" th:include="admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
-{block name="content"}
 <div class="x-body">
     <form class="layui-form" action="">
 
@@ -24,9 +22,7 @@
         </div>
     </form>
 </div>
-{/block}
 
-{block name="script"}
 <script>
     layui.use(['form', 'layer'], function () {
         $ = layui.jquery;
@@ -54,4 +50,4 @@
 
     });
 </script>
-{/block}
+<div id="footer" th:include="admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
