--- a/src/main/resources/templates/admin/user/index.html
+++ b/src/main/resources/templates/admin/user/index.html
@@ -1,6 +1,5 @@
-{extend name="base/template"}
+<div id="head" th:include="admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
-{block name="content"}
 <div class="x-nav">
       <span class="layui-breadcrumb">
         <a href="">首页</a>
@@ -25,7 +24,7 @@
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
         <button class="layui-btn" onclick="x_admin_show('添加用户','/admin/user/create')"><i class="layui-icon"></i>添加
         </button>
-        <span class="x-right" style="line-height:40px">共有数据：{$count} 条</span>
+        <span class="x-right" style="line-height:40px" xmlns:th="http://www.w3.org/1999/xhtml" th:text="'共有数据:'+${user.size()}+'条'">：{$count} 条</span>
     </xblock>
     <table class="layui-table layui-form">
         <thead>
@@ -42,41 +41,62 @@
             <th>操作</th>
         </thead>
         <tbody>
-        {foreach $user as $key=>$vo}
-        <tr>
+
+        <tr th:each="vo:${user}" xmlns:th="http://www.w3.org/1999/xhtml">
             <td>
-                <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$vo.id}'><i
+                <div class="layui-unselect layui-form-checkbox" lay-skin="primary" th:data-id='${vo.id}'><i
                         class="layui-icon">&#xe605;</i></div>
             </td>
-            <td>{$vo.id}</td>
-            <td>{$vo.nickname}</td>
-            <td>{$vo.email}</td>
-            <td>{$vo.create_time}</td>
+            <td th:text="${vo.id}">{$vo.id}</td>
+            <td th:text="${vo.nickname}"> {$vo.nickname}</td>
+            <td th:text="${vo.email}">{$vo.email}</td>
+            <td th:text="${vo.createTime}">{$vo.create_time}</td>
             <td class="td-status">
-                <input {if $vo.state>= 1} checked {/if} lay-text="开|关" type="checkbox" data-id="{$vo.id}" name="switch"
-                value="{$vo.state}"
+                <span th:if="${vo.state} ge 1">
+                <input   checked  lay-text="开|关" type="checkbox" th:data-id="${vo.id}" name="switch"
+                th:value="${vo.state}"
                 lay-skin="switch"
                 lay-filter="state">
+                </span>
+            <span th:if="${vo.state} eq 0">
+
+                    <input     lay-text="开|关" type="checkbox" th:data-id="${vo.id}" name="switch"
+                             th:value="${vo.state}"
+                             lay-skin="switch"
+                             lay-filter="state">
+
+            </span>
+
+
+
             <td class="td-manage">
-                <a title="编辑" onclick="x_admin_show('编辑','/admin/user/edit/{$vo.id}')" href="javascript:;">
+                <a title="编辑" th:onclick="'edit_user(' + ${vo.id} + ')'" href="javascript:;">
                     <i class="layui-icon">&#xe642;</i>
                 </a>
-                <a title="删除" onclick="del(this,'{$vo.id}')" href="javascript:;">
+                <a title="删除" th:onclick="'del(this,'+${vo.id}+')'" href="javascript:;">
                     <i class="layui-icon">&#xe640;</i>
                 </a>
             </td>
         </tr>
-        {/foreach}
+
         </tbody>
     </table>
     <div class="page">
-        {$user|raw}
+
     </div>
 
 </div>
-{/block}
-{block name="script"}
+
 <script>
+
+
+    function edit_user(id)
+    {
+        x_admin_show('编辑','/admin/user/edit/'+id);
+
+
+    }
+
     layui.use('laydate', function () {
         var laydate = layui.laydate;
 
@@ -129,7 +149,7 @@
     function delAll(argument) {
         var data = tableCheck.getData();
         layer.confirm('确认要删除吗？' + data, function (index) {
-            $.post('/admin/user/del', {id: data}, res => {
+            $.post('/admin/user/delall', {id: data}, res => {
                 if (res.code === 1) {
                     layer.msg(res.msg, {icon: 6, time: 1500}, () => {
                         $(".layui-form-checked").not('.header').parents('tr').remove();
@@ -141,4 +161,4 @@
         });
     }
 </script>
-{/block}
+<div id="footer" th:include="admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
