--- a/src/main/resources/templates/admin/web/index.html
+++ b/src/main/resources/templates/admin/web/index.html
@@ -1,6 +1,5 @@
-{extend name="base/template"}
+<div id="head" th:include="admin/base/head :: common_head" xmlns:th="http://www.w3.org/1999/xhtml"></div>
 
-{block name="content"}
 <div class="x-body layui-anim layui-anim-up">
     <form class="layui-form">
         <div class="layui-form-item">
@@ -8,7 +7,7 @@
                 <span class="x-red">*</span>网站名称
             </label>
             <div class="layui-input-block">
-                <input type="text" id="name" name="name" value="{$web.name}"  required
+                <input type="text" id="name" name="name" th:value="${web.name}"  required
                        lay-verify="required"
                        autocomplete="off" class="layui-input">
             </div>
@@ -19,7 +18,7 @@
                 <span class="x-red">*</span>网站Logo
             </label>
             <div class="layui-input-block">
-                <input type="text" id="logo" name="logo" value="{$web.logo}"  required
+                <input type="text" id="logo" name="logo" th:value="${web.logo}"  required
                        lay-verify="required"
                        autocomplete="off" class="layui-input">
             </div>
@@ -30,7 +29,7 @@
                 <span class="x-red">*</span>网站关键字
             </label>
             <div class="layui-input-block">
-                <input type="text" id="L_pass" value="{$web.keyword}" name="keyword" required lay-verify="pass"
+                <input type="text" id="L_pass" th:value="${web.keyword}" name="keyword" required lay-verify="pass"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
@@ -40,7 +39,7 @@
                 <span class="x-red">*</span>版权信息
             </label>
             <div class="layui-input-block">
-                <input type="text" id="copyright" value="{$web.copyright}" name="copyright" required
+                <input type="text" id="copyright" th:value="${web.copyright}" name="copyright" required
                        lay-verify="required"
                        autocomplete="off" class="layui-input">
             </div>
@@ -50,7 +49,7 @@
                 <span class="x-red">*</span>座右铭
             </label>
             <div class="layui-input-block">
-                <input type="text" id="motto" value="{$web.motto}" name="motto" required
+                <input type="text" id="motto" th:value="${web.motto}" name="motto" required
                        lay-verify="required"
                        autocomplete="off" class="layui-input">
             </div>
@@ -62,7 +61,7 @@
                 <span class="x-red">*</span>邮箱
             </label>
             <div class="layui-input-block">
-                <input type="text" id="L_email" name="email" value="{$web.email}" required lay-verify="email"
+                <input type="text" id="L_email" name="email" th:value="${web.email}" required lay-verify="email"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
@@ -72,11 +71,11 @@
                 <span class="x-red">*</span>描述
             </label>
             <div class="layui-input-block">
-                <textarea type="text" name="description" value="{$web.description}" required
-                          autocomplete="off" class="layui-textarea">{$web.description}</textarea>
+                <textarea type="text" name="description" th:value="${web.description}" required
+                          autocomplete="off" class="layui-textarea" th:text="${web.description}"></textarea>
             </div>
         </div>
-        <input type="hidden" name="id" value="{$web.id}">
+        <input type="hidden" name="id" th:value="${web.id}">
 
 
         <div class="layui-form-item">
@@ -88,8 +87,7 @@
         </div>
     </form>
 </div>
-{/block}
-{block name="script"}
+
 <script>
     layui.use(['form', 'layer'], function () {
         $ = layui.jquery;
@@ -111,4 +109,5 @@
         });
     });
 </script>
-{/block}
+<!--{/block}-->
+<div id="footer" th:include="admin/base/footer :: common_footer" xmlns:th="http://www.w3.org/1999/xhtml"></div>
