--- a/src/main/resources/templates/public/base/comment.html
+++ b/src/main/resources/templates/public/base/comment.html
@@ -1,3 +1,5 @@
+<div th:fragment="public_comment" >
+
 <div class="col-lg-12" id="comment-form">
     <div class="sidebar-item submit-comment">
         <div class="sidebar-heading">
@@ -202,5 +204,5 @@
 
     })
 </script>
-
+</div>
 
