--- a/src/main/resources/templates/public/base/right.html
+++ b/src/main/resources/templates/public/base/right.html
@@ -1,3 +1,5 @@
+<div th:fragment="public_right" >
+
 <div class="col-lg-4">
     <div class="sidebar">
         <div class="row">
@@ -58,4 +60,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
