--- a/src/main/resources/templates/public/page/404.html
+++ b/src/main/resources/templates/public/page/404.html
@@ -1,3 +1,4 @@
+<div th:fragment="public_404" >
 <div class="not-page">
     <div class="col-md-6 align-self-center">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -319,3 +320,4 @@
 
 <script src='__INDEX__/404/gsap.min.js'></script>
 <script src="__INDEX__/404/script.js"></script>
+</div>
